<resources>
    <string name="app_name">SMS Widget</string>
    <string name="configure">Configure</string>
    <string name="app_widget_description">Display your SMS Conversations</string>
    <string name="settings">settings</string>
    <string name="refresh">refresh</string>
    <string name="loading">loading</string>
    <string name="create">create</string>
    <string name="add_permissions">Please add permissions in Application Settings</string>
    <string name="sms">SMS</string>
    <string name="sms_widget_settings">SMS Widget Settings</string>
    <string name="number_of_messages">Number of messages to show:</string>
    <string name="continue_txt">Continue</string>
    <string-array name="message_numbers">
        <item>" 5"</item>
        <item>"10"</item>
        <item>"15"</item>
        <item>"25"</item>
        <item>"50"</item>
    </string-array>>
</resources>