<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginBottom="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SMSWidgetConfigureActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_sms_100"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/sms" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_widget_settings"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_marginTop="50dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="48dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_messages"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:textSize="16sp"
        />

    <Spinner
        android:id="@+id/spinner_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="48dp"
        android:entries="@array/message_numbers"
        android:spinnerMode="dialog"
        android:theme="@style/SpinnerText"
        android:prompt="@string/number_of_messages"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_add_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/continue_txt"
        style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>